kubernetes/apps/homebridge/homebridge/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homebridge
spec:
  ingressClassName: internal
  rules:
    - host: homebridge.clyde.tech
      http:
        paths:
          - backend:
              service:
                name: homebridge
                port:
                  number: 8581
            path: /
            pathType: Prefix
